--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,8 @@ dependencies:
   cloud_firestore: ^5.1.0
   file_picker: ^8.0.6
   image_picker: ^1.1.2
+  video_player: ^2.9.1
+  video_player_web: ^2.3.1
 
 dev_dependencies:
   flutter_test:
